--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Editor diretories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
